kube/deploy/apps/kanidm/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: &app kanidm
  namespace: *app
spec:
  endpointSelector: {}
  ingress:
    # same namespace
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
    # ingress controller
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: ingress
            app.kubernetes.io/instance: ingress-nginx
            app.kubernetes.io/name: ingress-nginx
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
          # terminatingTLS:
          #   secret:
          #     name: "kanidm-tls"
          #     namespace: *app
          # originatingTLS:
          #   secret:
          #     name: "kanidm-tls"
          #     namespace: *app
          # rules:
          #   http:
          #     - {}
        - ports:
            - port: "636"
              protocol: TCP
            - port: "3636"
              protocol: TCP
    - fromCIDRSet:
        - cidr: "${IP_ROUTER_LAN_CIDR}"
        - cidr: "${IP_WG_USER_1_V4}"
        - cidr: "${IP_WG_GUEST_V4}"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
          # terminatingTLS:
          #   secret:
          #     name: "kanidm-tls"
          #     namespace: *app
          # originatingTLS:
          #   secret:
          #     name: "kanidm-tls"
          #     namespace: *app
          # rules:
          #   http:
          #     - {}
        - ports:
            - port: "636"
              protocol: TCP
            - port: "3636"
              protocol: TCP
  egress:
    # same namespace
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: *app
